k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: mosp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:13
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: mosp-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosp
  namespace: mosp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosp
  template:
    metadata:
      labels:
        app: mosp
    spec:
      containers:
        - name: mosp
          image: ghcr.io/danything/mosp:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: mosp-logs
              mountPath: /usr/local/tomcat/webapps/ROOT/logs
      volumes:
        - name: mosp-logs
          persistentVolumeClaim:
            claimName: mosp-logs
