k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: mosp
spec:
  selector:
    app: db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: mosp
  namespace: mosp
spec:
  selector:
    app: mosp
  ports:
    - name: http
      port: 8080
      targetPort: 8080
