k3s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mosp
  namespace: mosp
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: mydnschallenge
  routes:
    - match: Host(`mp.doany.io`)
      kind: Rule
      priority: 50
      middlewares:
        - name: forward-auth
          namespace: auth
      services:
        - name: mosp
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mosp-home-arpa-http
  namespace: mosp
spec:
  entryPoints:
    - websecure
  tls:
    secretName: mp-home-arpa-tls
  routes:
    - match: Host(`mp.home.arpa`) && ClientIP(`10.10.0.0/16`)
      kind: Rule
      services:
        - name: mosp
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: mosp
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mosp-home-arpa-redirect
  namespace: mosp
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`mp.home.arpa`) && ClientIP(`10.10.0.0/16`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: mosp
          port: 8080
